[package]
name = "solana-k8s-cluster"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/k8s-cluster"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"
publish = false
description = "Kubernetes Validator Deployment for Testing"

[dependencies]
aes-gcm-siv = { git = "https://github.com/gregcusack/AEADs.git", rev = "0b291255b5e71a86b68c21c7b2f2ecba943baabd" }
anyhow = "1.0.75"
assert_matches = "1.5.0"
base64 = "0.21.4"
bincode = "1.3.3"
bv = "0.11.1"
bzip2 = "0.4.4"
chrono = { version = "0.4.31", default-features = false }
clap = "2.33.1"
console = "0.15.7"
crossbeam-channel = "0.5.8"
csv = "1.2.2"
ctrlc = "3.4.1"
curve25519-dalek = { git = "https://github.com/gregcusack/curve25519-dalek.git", rev = "9d82dab8048cf0a62ea20ea376461be3b10a8a39" }
dashmap = "4.0.2"
derivation-path = { version = "0.2.0", default-features = false }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
either = "1.9.0"
enum-iterator = "1.4.1"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.27"
fnv = "1.0.7"
fs_extra = "1.3.0"
fs-err = "2.9.0"
futures = "0.3.28"
futures-util = "0.3.28"
gag = "1.0.0"
git2 = "0.17.2"
generic-array = { version = "0.14.7", default-features = false }
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
hex = "0.4.3"
hidapi = { version = "2.4.1", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.9"
humantime = "2.0.1"
hyper = "0.14.27"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.7"
indexmap = "2.0.0"
indicatif = "0.17.6"
Inflector = "0.11.4"
itertools = "0.10.5"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }
js-sys = "0.3.64"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-server-utils = "18.0.0"
kube = "0.85.0"
k8s-openapi ={ version = "0.19.0", features = ["v1_27"] }
lazy_static = "1.4.0"
libc = "0.2.148"
libloading = "0.7.4"
libsecp256k1 = "0.6.0"
light-poseidon = "0.1.1"
log = "0.4.20"
lru = "0.7.7"
lz4 = "1.24.0"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
modular-bitfield = "0.11.2"
nix = "0.26.4"
num-bigint = "0.4.4"
num_cpus = "1.16.0"
num_enum = "0.6.1"
num-derive = "0.3"
num-traits = "0.2"
openssl = "0.10"
ouroboros = "0.15.6"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
pkcs8 = "0.8.0"
predicates = "2.1"
pretty-hex = "0.3.0"
proc-macro2 = "1.0.67"
proptest = "1.2"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.10.2"
quinn-proto = "0.10.5"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
raptorq = "1.7.0"
rayon = "1.7.0"
rcgen = "0.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.9.5"
rolling-file = "0.2.0"
reqwest = { version = "0.11.20", default-features = false }
rpassword = "7.2"
rustc_version = "0.4"
rustls = { version = "0.21.7", default-features = false, features = ["quic"] }
rustversion = "1.0.14"
scopeguard = "1.2.0"
semver = "1.0.18"
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_derive = "1.0.103"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
serial_test = "2.0.0"
serde_with = { version = "2.3.3", default-features = false }
sha2 = "0.10.7"
sha3 = "0.10.4"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smpl_jwt = "0.7.1"
socket2 = "0.5.4"
soketto = "0.7"
solana_rbpf = "=0.7.1"
solana-account-decoder = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-accounts-db = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-address-lookup-table-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-banks-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-banks-interface = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-banks-server = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-bench-tps = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-bloom = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-bpf-loader-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-bucket-map = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-connection-cache = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-clap-utils = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-clap-v3-utils = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-cli = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-cli-config = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-cli-output = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-compute-budget-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-config-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-core = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-cost-model = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-download-utils = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-entry = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-faucet = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-frozen-abi = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-frozen-abi-macro = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-genesis = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-genesis-utils = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-geyser-plugin-interface = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-geyser-plugin-manager = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-gossip = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-loader-v4-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-ledger = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-local-cluster = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-logger = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-measure = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-merkle-tree = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-metrics = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-net-utils = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-notifier = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-perf = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-poh = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-program-runtime = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-program-test = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-pubsub-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-quic-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-rayon-threadlimit = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-remote-wallet = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-rpc = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-rpc-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-rpc-client-api = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-rpc-client-nonce-utils = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-runtime = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-sdk = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-sdk-macro = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-send-transaction-service = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-stake-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-storage-bigtable = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-storage-proto = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-streamer = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-system-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-test-validator = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-thin-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-tpu-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-transaction-status = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-turbine = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-udp-client = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-version = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-vote = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-vote-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-zk-keygen = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-zk-token-proof-program = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
solana-zk-token-sdk = { git = "https://github.com/gregcusack/solana", branch="solana-k8s-cluster", version = "1.17.0" }
static_assertions = "1.1.0"
tar = "0.4.40"
tempfile = "3.8.0"
thiserror = "1.0.48"
tiny-bip39 = "0.8.2"
tokio = "1.29.1"
url = "2.4.1"




[dev-dependencies]
anyhow = "1.0.75"
num_cpus = "1.16.0"
serial_test = "2.0.0"

[build-dependencies]
rustc_version = "0.4"

[[bin]]
name = "solana-k8s"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
