[package]
name = "solana-k8s-cluster"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/k8s-cluster"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"
publish = false
description = "Kubernetes Validator Deployment for Testing"

[dependencies]

base64 = "0.21.4"
clap = "2.33.1"
kube = "0.85.0"
k8s-openapi ={ version = "0.19.0", features = ["v1_27"] }
lazy_static = "1.4.0"
log = "0.4.20"
solana-logger = "1.16.14"
tiny-bip39 = "0.8.2"
tokio = { version = "1.29.1", features = ["full"] }


[dev-dependencies]
anyhow = "1.0.75"
num_cpus = "1.16.0"
serial_test = "2.0.0"

[build-dependencies]
rustc_version = "0.4"

[[bin]]
name = "solana-k8s"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
